FRONTEND:fix collapsable button

--- a/models/static/styles/main.css
+++ b/models/static/styles/main.css
@@ -213,3 +213,8 @@ a:hover {
     width: auto;
  }
  
+ .fixed-button {
+   position: fixed;
+   top: 4px;
+   right: 10px;
+}
